# geoanalysis-urban-planning-council-decisions

./: .gitignore  CHANGES_locations_table_removal.md  ENRICHMENT.md  IMPLEMENTATION_SUMMARY.md  OPARL_API_STRUCTURE.md  OParl Augsbur.pptx  PIPELINE_WORKFLOW.md  Proposal.md  QUICKSTART.md  README.md  TESTING.md  aboutOParlAugs.ipynb  check_agenda.R  config.yaml  environment.yml  mpai_database_backup_20250909_085510.sql  oparl_structure.json  pyproject.toml  pytest.ini  requirements.txt  setup_complete.sh  test_extractor.py  test_meeting_fetch.R  ~$OParl Augsbur.pptx
.claude/: settings.local.json
Datadump-Pipeline/: ARCHITECTURE.md  README.md  SQL_CHEATSHEET.md  config.yaml  requirements.txt  schema_stadtrat.sql  setup.sh  stadtrat_etl_pipeline.py
R/: README.md  __init__.py  check_dependencies.py  geocoding.R  location_extractor.py  oparl_api.R  oparl_data_loader.py  text_analysis.R  utils.R  visualization.R
analysis/: 00_oparl_test_augsburg.ipynb  01_augsburg_analyse_clean.ipynb  01_download_data.R  02_extract_pdf_text.R  02_prepare_data.R  03_extract_locations.R  03_geocode_data.R  README.md
archive/: 02_local_test_prepare_data.R  04_geocode_data.R  README.md  augsburg_agenda.rds  augsburg_meetings_raw.rds  oparl_api.R  text_analysis.R  utils.R
data/: README.md  augsburg_streets.csv
data-raw/: augsburg_meetings_cache.parquet
notebooks/: 00_oparl_test_augsburg.ipynb  01_augsburg_analyse_clean.ipynb  02_test_pipeline_output.ipynb  README.md
scripts/: 00_setup_city.py  README.md  demo_oparl_bonn.R  run_pipeline.py
src/: LOCATION_TRACKING.md  README.md  check_dependencies.py  client.py  downloadpdf.py  enrichment.py  extraction.py  location_extractor.py  oparl_data_loader.py  spatial.py  state.py  storage.py  validation.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_client.py  test_ephemeral_storage.py  test_extraction.py  test_integration.py  test_spatial.py  test_state.py  test_storage.py
tests_demo/: demo_oparl_augsburg.R  demo_oparl_bonn.R  demo_oparl_cologne.R
vignettes/: README.md  placeholder.Rmd
(+18 files in other folders)
