[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oparl-data-pipeline"
version = "0.1.0"
description = "Extract, enrich, and convert OParl data to Parquet/RDF"
authors = [
    {name = "Benloui", email = "your.email@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",      # API requests
    "pdfplumber>=0.10.3",    # PDF text extraction
    "pandas>=2.0.0",        # Data processing (Parquet)
    "pyarrow>=12.0.0",      # Parquet support
    "rdflib>=6.3.2",        # RDF/SPARQL
    "PyYAML>=6.0.1",        # YAML config
    "pyparsing>=3.1.1",     # Dependency for rdflib
    "spacy>=3.7.0",         # Optional: NER enrichment
    "geopandas>=0.13.2",    # Optional: GeoSPARQL support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",        # Testing
    "black>=23.9.1",        # Code formatting
    "isort>=5.12.0",        # Import sorting
    "mypy>=1.5.1",          # Type checking
]

[tool.setuptools]
packages = ["src"]  # Assuming your code is in a `src/` directory

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
