[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "oparl-pipeline"
version = "0.1.0"
description = "Spatial Analysis of Municipal Council Data"
authors = [{name = "Benedikt Pilgram", email = "benedikt.pilgram@student.unibe.ch"}]
requires-python = ">=3.9"
dependencies = [
    "requests",
    "pandas",
    "pyyaml",
    "pymupdf",      # f端r fitz (PDF)
    "pyarrow",      # f端r Parquet (Alternative: fastparquet)
    "rdflib",       # f端r RDF/TTL
    "spacy",
    "thefuzz",
    "geopy",
    "requests-cache" # optional, aber gut f端r APIs
]

# WICHTIG: Das macht den 'src' Ordner automatisch zum Paket
[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]